k8srequiredlabels.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  annotations:
    description: Requires all resources to contain a specified label with a value
      matching a provided regular expression.
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"templates.gatekeeper.sh/v1beta1","kind":"ConstraintTemplate","metadata":{"annotations":{"description":"Requires all resources to contain a specified label with a value matching a provided regular expression."},"labels":{"configmanagement.gke.io/configmanagement":"config-management","k8s-app":"kubernetes-config-management","policycontroller.configmanagement.gke.io":"true"},"name":"k8srequiredlabels","ownerReferences":[{"apiVersion":"configmanagement.gke.io/v1","blockOwnerDele [...]
  creationTimestamp: "2021-09-01T19:15:23Z"
  generation: 1
  labels:
    configmanagement.gke.io/configmanagement: config-management
    k8s-app: kubernetes-config-management
    policycontroller.configmanagement.gke.io: "true"
  managedFields:
  - apiVersion: templates.gatekeeper.sh/v1beta1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:description: {}
          f:kubectl.kubernetes.io/last-applied-configuration: {}
        f:labels:
          .: {}
          f:configmanagement.gke.io/configmanagement: {}
          f:k8s-app: {}
          f:policycontroller.configmanagement.gke.io: {}
        f:ownerReferences:
          .: {}
          k:{"uid":"e1113c3f-44c2-4a94-ad86-55422839f36f"}:
            .: {}
            f:apiVersion: {}
            f:blockOwnerDeletion: {}
            f:controller: {}
            f:kind: {}
            f:name: {}
            f:uid: {}
      f:spec:
        .: {}
        f:crd:
          .: {}
          f:spec:
            .: {}
            f:names:
              .: {}
              f:kind: {}
            f:validation:
              .: {}
              f:legacySchema: {}
              f:openAPIV3Schema:
                .: {}
                f:properties: {}
        f:targets: {}
    manager: Go-http-client
    operation: Update
    time: "2021-09-01T19:15:23Z"
  - apiVersion: templates.gatekeeper.sh/v1beta1
    fieldsType: FieldsV1
    fieldsV1:
      f:status:
        .: {}
        f:byPod: {}
        f:created: {}
    manager: gatekeeper
    operation: Update
    time: "2021-09-01T19:17:09Z"
  name: k8srequiredlabels
  ownerReferences:
  - apiVersion: configmanagement.gke.io/v1
    blockOwnerDeletion: true
    controller: true
    kind: ConfigManagement
    name: config-management
    uid: e1113c3f-44c2-4a94-ad86-55422839f36f
  resourceVersion: "5283498"
  uid: 16d6fb8c-b34f-4f3f-91a7-38fa4a60d4e5
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredLabels
      validation:
        legacySchema: true
        openAPIV3Schema:
          properties:
            labels:
              items:
                properties:
                  allowedRegex:
                    type: string
                  key:
                    type: string
                type: object
              type: array
            message:
              type: string
  targets:
  - rego: |
      package k8srequiredlabels

      get_message(parameters, _default) = msg {
        not parameters.message
        msg := _default
      }

      get_message(parameters, _default) = msg {
        msg := parameters.message
      }

      violation[{"msg": msg, "details": {"missing_labels": missing}}] {
        provided := {label | input.review.object.metadata.labels[label]}
        required := {label | label := input.parameters.labels[_].key}
        missing := required - provided
        count(missing) > 0
        def_msg := sprintf("you must provide labels: %v", [missing])
        msg := get_message(input.parameters, def_msg)
      }

      violation[{"msg": msg}] {
        value := input.review.object.metadata.labels[key]
        expected := input.parameters.labels[_]
        expected.key == key

        # do not match if allowedRegex is not defined, or is an empty string
        expected.allowedRegex != ""
        not re_match(expected.allowedRegex, value)
        def_msg := sprintf("Label <%v: %v> does not satisfy allowed regex: %v", [key, value, expected.allowedRegex])
        msg := get_message(input.parameters, def_msg)
      }
    target: admission.k8s.gatekeeper.sh
status:
  byPod:
  - id: gatekeeper-audit-79966db76-g9t4n
    observedGeneration: 1
    operations:
    - audit
    - status
    templateUID: 16d6fb8c-b34f-4f3f-91a7-38fa4a60d4e5
  - id: gatekeeper-controller-manager-78bb8f574f-qthrj
    observedGeneration: 1
    operations:
    - webhook
    templateUID: 16d6fb8c-b34f-4f3f-91a7-38fa4a60d4e5
  - id: gatekeeper-mutation-7696499fc9-4xr86
    observedGeneration: 1
    operations:
    - mutation-status
    - webhook
    templateUID: 16d6fb8c-b34f-4f3f-91a7-38fa4a60d4e5
  created: true
